--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html,body,#root{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: #9789ff;
+  background-color: #fff;
 }
 
 /* Handle */
